Fixed the body to stretch all sections of the page. :)

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body
+{
+    margin: 0;
+    padding: 0;
+}
+
 .flex-container1 div
 {
     background-color: #1F2937;
@@ -6,7 +12,7 @@
     align-items: center;
     position: relative;
     width: 1000px;
-    height: 250px;
+    height: 350px;
 }
 
 .flex-container1
@@ -18,7 +24,6 @@ img
 {
     height: 25%;
     width: 25%;
-    
     margin-left: 70%;
     position: absolute;
     top: 80px;
@@ -96,4 +101,15 @@ p
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.footer
+{
+    background-color: #1F2937;
+    color: #E5E7EB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    gap: 16px;
 }
